--- a/sass/page/_mp.scss
+++ b/sass/page/_mp.scss
@@ -1,62 +1,804 @@
-/////////////////////////////////////////////////////////以下為demo範例///
-// 首頁區塊設定
-// 範例：
-.demosection {
-    [class^="col"] {
-        border: 2px solid #FFF;
-        background: #DEDEDE;
+.hero_block{
+  width: 100%;
+  height: 628px;
+  position: relative;
+  overflow: hidden;
+  @include screen('mobile') {
+    height: 460px;
+  }
+  >div{
+    position: absolute;
+  }
+  .hero_highlight{
+    left: 163px;
+    top: 163px;
+    z-index: 13;
+    @include screen('tablet') {
+      left: 6%;
     }
-}
-// 首頁輪播
-.mpSlider {
-    width: 100%;
-    padding-bottom: 3em;
-    @include gutter(0);
-    .img-container {
-        @include aspect-ratio(5, 2);
-    }
-}
-// 廣告輪播
-.adSlider {
-    @include gutter(70px);
-    margin-bottom: 20px;
     @include screen('mobile') {
-        @include gutter();
+      position: relative;
+      left: auto;
+      top: 80px;
+      text-align: center;
     }
-    .slick-prev {
-        background: url(../vendor/slick/icon_arrow_left_inverse.png) no-repeat center center;
-        background-size: 80%;
-        left: -15px;
+  }
+  .hero_title{
+    left: 123px;
+    top: 238px;
+    z-index: 13;
+    @include screen('tablet') {
+      left: 5%;
     }
-    .slick-next {
-        background: url(../vendor/slick/icon_arrow_right_inverse.png) no-repeat center center;
-        background-size: 80%;
-        right: -15px;
+    @include screen('mobile') {
+      right: 5%;
+      top: 170px;
+      img{
+        width: 100%;
+      }
     }
-    .img-container {
-        width: 165px;
-        height: 55px;
-        margin: 0px 15px;
-        a {
+  }
+  .hero_text{
+    top: 374px;
+    left: 150px;
+    z-index: 13;
+    color: #fff9e2;
+    width: 595px;
+    line-height: 160%;
+    p{
+      margin: 0;
+    }
+    @include screen('tablet') {
+      left: 6%;
+    }
+    @include screen('mobile') {
+      left: 10%;
+      top: auto;
+      bottom: 40px;
+      width: 80%;
+    }
+  }
+  .hero_pic{
+    left:464px;
+    top: 0;
+    z-index: 12;
+    height: 628px;
+    overflow: hidden;
+    @include screen('tablet') {
+      right: -19%;
+      left: auto;
+    }
+    @include screen('mobile') {
+      display: none;
+    }
+  }
+  .hero_bg{
+    left: 0;
+    top: 0;
+    z-index: 9;
+    height: 577px;
+  }
+  .hero_para1{
+    left: 196px;
+    bottom: 61px;
+    z-index: 11;
+    font-size: 0;
+    @include screen('mobile') {
+      display: none;
+    }
+    &:before{
+      content: "";
+      background: #22063c;
+      width: 370px;
+      height: 320px;
+      display: block;
+      transform: skew(-21.4deg);
+      opacity: .8;
+    }
+  }
+  .hero_para2{
+    top: 0;
+    left: 470px;
+    z-index: 10;  
+    font-size: 0;
+    @include screen('tablet') {
+      left: 45%;
+    }
+    @include screen('mobile') {
+      display: none;
+    }
+    &:before{
+      content: "";
+      background: #41044e;
+      height: 628px;
+      width: 150px;
+      display: block;
+      transform: skew(-21.4deg);
+      opacity: .8;
+    }
+  }
+  .hero_deco1,.hero_deco2,.hero_deco3,.hero_deco4{
+    font-size: 0;
+    position: absolute;
+    z-index: 13;
+    @include screen('mobile') {
+      display: none;
+    }
+  }
+  .hero_deco1{
+    left: 70px;
+    top: 474px;
+  }
+  .hero_deco2{
+    left: 316px;
+    top: 99px;
+  }
+  .hero_deco3{
+    left: 702px;
+    top: 176px;
+  }
+  .hero_deco4{
+    right: 33px;
+    top:403px;
+  }
+}
+.main{
+  .more{
+    width: 100%;
+    text-align: center;
+    padding: 3em 0;
+    a{
+      padding: .5em 4em;
+      border:1px solid $primaryColor;
+      display: inline-block;
+      color: $primaryColor;
+      position: relative;
+      transition: color 1s;
+      span{
+        position: relative;
+        z-index: 9;
+      }
+      &:before{
+        content: "";
+        width: 40px;
+        height: 1px;
+        background: $primaryColor;
+        background: linear-gradient(90deg, $primaryColor 50%, #6c6ce4 50%);
+        position: absolute;
+        left: -20px;
+        top: 19px;
+        transition: all 1s;
+        animation: moreleftout 1s ease-in-out forwards;
+      }
+      &:after{
+        content: "";
+        width: 40px;
+        height: 1px;
+        background: $primaryColor;
+        background: linear-gradient(-90deg, $primaryColor 50%, #6c6ce4 50%);
+        position: absolute;
+        right: -20px;
+        top: 19px;
+        transition: all 1s;
+        animation: morerightout 1s ease-in-out forwards;
+      }
+      &:hover{
+        color: #fff;
+        transition: color 1s;
+        &:before{
+          animation: moreleftin 1s ease-in-out forwards;
+          transition: all 1s;
+        }
+        &:after{
+          animation: morerightin 1s ease-in-out forwards;
+          transition: all 1s;
+        }
+      }
+    }
+  }
+}
+@keyframes moreleftin {
+  0% {
+    left: -20px;
+  }
+  25% {
+    left: 0;
+    top: 19px;
+    width: 0;
+    height: 1px;
+  }
+  50% {
+    left: 0;
+    top:0;
+    width: 0;
+    height: 100%;
+    background: $primaryColor;
+    position: absolute;
+  }
+  100% {
+    left: 0;
+    top:0;
+    width: 50%;
+    height: 100%;
+    background: $primaryColor;
+    position: absolute;
+  }
+}
+@keyframes moreleftout {
+  0% {
+    left: 0;
+    top:0;
+    width: 50%;
+    height: 100%;
+    background: $primaryColor;
+    position: absolute;
+  }
+  25% {
+    left: 0;
+    top:0;
+    width: 0;
+    height: 100%;
+    background: $primaryColor;
+    position: absolute;
+  }
+  50% {
+    left: 0;
+    top: 19px;
+    width: 0;
+    height: 1px;
+  }
+  100% {
+    left: -20px;
+  }
+}
+@keyframes morerightin {
+  0% {
+    right: -20px;
+  }
+  25% {
+    right: 0;
+    top: 19px;
+    width: 0;
+    height: 1px;
+  }
+  50% {
+    right: 0;
+    top:0;
+    width: 0;
+    height: 100%;
+    background: $primaryColor;
+    position: absolute;
+  }
+  100% {
+    right: 0;
+    top:0;
+    width: 50%;
+    height: 100%;
+    background: $primaryColor;
+    position: absolute;
+  }
+}
+@keyframes morerightout {
+  0% {
+    right: 0;
+    top:0;
+    width: 50%;
+    height: 100%;
+    background: $primaryColor;
+    position: absolute;
+  }
+  25% {
+    right: 0;
+    top:0;
+    width: 0;
+    height: 100%;
+    background: $primaryColor;
+    position: absolute;
+  }
+  50% {
+    right: 0;
+    top: 19px;
+    width: 0;
+    height: 1px;
+  }
+  100% {
+    right: -20px;
+  }
+}
+.block_title{
+  text-align: center;
+  background: url(../images/mp/line.png) no-repeat center bottom; 
+  font-size: 2em;
+  color: #24083a;
+  padding-bottom: 18px;
+  margin-bottom: 60px;
+  flex:0 0 100%;
+  span{
+    color:$secondaryColor;
+  }
+  @include screen('mobile') {
+    margin-bottom: 40px;
+  }
+}
+.words_block{
+  padding: 135px 0 0 0;
+  margin-top: -84px;  
+  position: relative;
+  z-index: 99;
+  @include screen('mobile') {
+    margin-top: 0;
+    padding: 20px 0 0 0;
+  }
+  .words_deco{
+    position: absolute;
+    left: -150px;
+    top: 0;
+    font-size: 0;
+    @include screen('mobile') {
+      display: none;
+    }
+    &:before{
+      content:"";
+      width: 500px;
+      height: 750px;
+      display: block;
+      transform: skew(-21.4deg);
+      background: rgba(125,142,229,.53);
+    }
+  }
+  .container{
+    display: flex;
+    flex-wrap:wrap;
+    padding: 0 35px;
+    @include screen('mobile') {
+      display: block;
+    }
+  }
+  .text{
+    flex: 1 1 500px;
+    font-size: 1.125em;
+    color: #210941;
+    margin-right: 40px;
+    @include screen('mobile') {
+      width: 100%;
+    }
+    p{
+      margin-top: 0;
+      line-height: 180%;
+    }
+  }
+  .pic{
+    flex: 0 1 205px;
+    @include screen('mobile') {
+      width: 100%;
+    }
+    img{
+      display: block;
+      box-shadow: 0 0 .5em rgba(0,0,0,.3) ;
+      @include screen('mobile') {
+        width: 100%;
+        height: auto;
+        box-shadow: none;
+      }
+    }
+  }
+}
+.achievement_block{
+  .container{
+    padding: 0 35px;
+  }
+  ul{
+    @include li-reset;
+    display: flex;
+    justify-content:space-between;
+    @include screen('mobile') {
+      display: block;
+    }
+    li{
+      width: 300px;
+      @include screen('tablet') {
+        width: 270px;
+      }
+      @include screen('mobile') {
+        width: 100%;
+        margin-bottom: 1em;
+      }
+      a{
+        border:1px solid #fff;
+        padding: 10px;
+        display: block;
+        height: 100%;
+        @include screen('mobile') {
+          padding: 0;
+        }
+        .pic{
+          display: block;
+          margin-bottom: 0.5em;
+          width: 100%;
+          @include aspect-ratio(280,190); 
+          position: relative;
+          &:after{
+            content: "";
+            width: 100%;
+            height: 100%;
             display: block;
-            text-align: center;
-            img {
-                margin: 0 auto;
-            }
+            position: absolute;
+            left: 0;
+            top: 0;
+            z-index: 10;
+            background: rgba(36,8,58,.3) url("../images/mp/open.png") no-repeat center center;
+            background-size: 48px;
+            opacity: 0;
+            transition: all .5s;
+          }
+          img{
+            width: 100%;
+            height: auto;
+            z-index: 9;
+          }
         }
-        &:focus {
-            &:before {
-                content: "";
-                position: absolute;
-                z-index: 9;
-                width: 100%;
-                height: 100%;
-                top: 0;
-                left: 0;
-                bottom: 0;
-                right: 0;
-                box-shadow: 0 0px 0px 3px $primaryColor inset;
-            }
+        .title{
+          display: block;
+          font-size: 1.125em;
+          color: #8f1182;
+          margin-bottom: 0.5em;
         }
+        .text{
+          display: block;
+          color: #210941;
+        }
+        &:hover{
+          border:1px solid $secondaryColor;
+          @include screen('mobile') {
+            border:1px solid #fff;
+          }
+          .pic{
+            &:after{
+              transition: all .5s;
+              opacity: 1;
+            }
+          }
+          .title{
+            color: #8f1182;
+            text-decoration: underline;
+          }
+          .text{
+            text-decoration: underline;
+          }
+        }
+      }
     }
+  }
+}
+.events_block{
+  position: relative;
+  .events_deco{
+    position: absolute;
+    right: -200px;
+    top: -150px;
+    font-size: 0;
+    height: 414px;
+    &:before{
+      content:"";
+      width: 500px;
+      height: 414px;
+      display: block;
+      transform: skew(-21.4deg);
+      background: rgba(64,0,96,.35);
+    }
+    @include screen('mobile') {
+      display: none;
+    }
+  }
+  .container{
+    padding: 0 35px;
+  }
+  .tabItem{
+    position: relative;
+    &:before{
+      content: "";
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      right: 0;
+      top: 0;
+      background: #fff;
+      opacity: 1;
+      transition: all 1s;
+    }
+    a{
+      background: transparent;
+      color: #7d1c7b;
+      border-top:2px solid #732178;
+      border-bottom:2px solid #732178;
+      position: relative;
+      outline: none;
+      &:focus{
+        box-shadow: 0 0 0 transparent;
+      }
+      @include screen('mobile') {
+        border:2px solid #732178;
+        border-bottom:0;
+      }
+    }
+    &:first-child{
+      a{
+        border-left:2px solid #732178;
+      }
+    }
+    &:last-of-type{
+      a{
+        border-right:2px solid #732178;
+        @include screen('mobile') {
+          border-bottom:2px solid #732178;
+        }
+      }
+    }
+    &.active{
+      &:before{
+        content: "";
+        background: #732178;
+        transition: all 1s;
+      }
+      a{
+        border-color: #732178;
+        background: transparent;
+        color: #fff;
+      }
+    }
+    &:hover{
+      a{
+        background: transparent;
+        color: $secondaryColor;
+      }
+    }
+
+  }
+  .tabContent{
+    padding: 20px 0;
+    ul{
+      display: flex;
+      flex-wrap:wrap;
+      justify-content: center;
+      position: relative;
+      @include screen('mobile') {
+        display: block;
+      }
+      &:before{
+        content: "";
+        width: 100%;
+        height: 5px;
+        display: block;
+        position: absolute;
+        top: calc(50% - 3px);
+        left: 0;
+        background: rgb(53,45,113);
+        background: linear-gradient(90deg, rgba(53,45,113,0) 0%, rgba(53,45,113,1) 5%, rgba(170,2,140,1) 95%, rgba(175,0,141,0) 100%);
+        @include screen('mobile') {
+          width: 5px;
+          height: 100%;
+          background: linear-gradient(180deg, rgba(53,45,113,0) 0%, rgba(53,45,113,1) 5%, rgba(170,2,140,1) 95%, rgba(175,0,141,0) 100%);
+          top:0;
+          left: 10px;
+        }
+      }
+      li{
+        flex: 0 1 31%;
+        height: 148px;
+        border-bottom: 0;
+        padding: 30px 1%;
+        position: relative;
+        box-sizing: content-box;
+        margin: 0;
+        @include screen('tablet') {
+          height: 260px;
+        }
+        @include screen('mobile') {
+          width: 100%;
+          padding: 0 10px 0 30px;
+          height: 148px;
+          box-sizing: border-box;
+          margin-bottom: 1.5em;
+        }
+
+        &:before{
+          content: "";
+          width: 16px;
+          height: 16px;
+          display: block;
+          background:#fff;
+          border:5px solid #352d71;
+          border-radius:50%;
+          position: absolute;
+          left: 70px;
+          bottom: -13px;
+          @include screen('mobile') {
+            left:0;
+            top:70px;
+          }
+        }
+        &:nth-child(2){
+          order:4;
+          &:before{
+            border:5px solid #582d71;
+            top: -13px;
+            @include screen('mobile') {
+              top:70px;
+            }
+          }
+        }
+        &:nth-child(3){
+          &:before{
+            border:5px solid #762079;
+          }
+        }
+        &:nth-child(4){
+          order:5;
+          &:before{
+            border:5px solid #901282;
+            top: -13px;
+            @include screen('mobile') {
+              top:70px;
+            }
+          }
+        }
+        &:nth-child(5){
+          &:before{
+            border:5px solid #ae008d;
+          }
+        }
+        a{
+          display: block;
+          overflow: hidden;
+          .pic{
+            width: 148px;
+            height: 148px;
+            border-radius: 50%;
+            display: inline-block;
+            overflow: hidden;
+            float: left;
+            margin-right: 10px;
+            position: relative;
+            @include screen('tablet') {
+              float: none;
+              margin-right: 0;
+            }
+            @include screen('mobile') {
+              float: left;
+              margin-right: 10px;
+            }
+            &:after{
+              content: "";
+              width: 100%;
+              height: 100%;
+              display: block;
+              position: absolute;
+              left: 0;
+              top: 0;
+              z-index: 10;
+              background: rgba(36,8,58,.3) url("../images/mp/open.png") no-repeat center center;
+              background-size: 36px;
+              opacity: 0;
+              transition: all .5s;
+            }
+            img{
+              width: 148px;
+              height: 148px;
+              position: relative;
+              z-index: 9;
+            }
+          }
+          time{
+            color: #8f1282;
+            font-size: 1em;
+            margin: 1em 0 .3em 0;
+            display: block;
+            @include screen('tablet') {
+              margin: .3em 0;
+              width: 148px;
+              text-align: center;
+            }
+            @include screen('mobile') {
+              width: auto;
+              text-align: left;
+            }
+          }
+          .title{
+            color: #141248;
+            line-height: 3em;
+            display: block;
+            @include text-line(3,1.5em);
+            @include screen('tablet') {
+              width: 148px;
+              text-align: center;
+            }
+            @include screen('mobile') {
+              width: auto;
+              text-align: left;
+              white-space: normal;
+              @include text-line(4,1.5em);
+            }
+          }
+          &:hover{
+            .pic{
+              &:after{
+                opacity: 1;
+                transition: all .5s;
+              }
+            }
+            .title{
+              text-decoration: underline;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+.video_block{
+  position: relative;
+  .video_deco{
+    position: absolute;
+    left: -180px;
+    bottom: 0;
+    font-size: 0;
+    height: 575px;
+    &:before{
+      content:"";
+      width: 500px;
+      height: 575px;
+      display: block;
+      transform: skew(-21.4deg);
+      background: rgba(125,142,229,.53);
+    }
+    @include screen('mobile') {
+      display: none;
+    }
+  }
+  .container{
+    display: flex;
+    flex-wrap:wrap;
+    padding: 0 35px;
+    @include screen('mobile') {
+      display: block;
+    }
+  }
+  .text{
+    flex: 1 1 50%;
+    padding-left: 40px;
+    @include screen('mobile') {
+      width: 100%;
+      padding-left: 0;
+    }
+    .title{
+      font-size: 1.625em;
+      color: #8f1282;
+      margin-bottom: 2em;
+      display: block;
+      @include screen('mobile') {
+        margin-bottom: 1em;
+      }
+    }
+    p{
+      margin-top: 0;
+      line-height: 180%;
+      color: #210941;
+    }
+  }
+  .video{
+    flex: 0 1 465px;
+    @include screen('mobile') {
+      width: 100%;
+      margin-bottom: 1.5em;
+    }
+    img{
+      display: block;
+      box-shadow: 0 0 .5em rgba(0,0,0,.3) ;
+      @include screen('mobile') {
+        width: 100%;
+        height: auto;
+        box-shadow: none;
+      }
+    }
+  }
 }
