--- a/sass/sass/_breadcrumb.scss
+++ b/sass/sass/_breadcrumb.scss
@@ -1,8 +1,5 @@
 .breadcrumb {
-    border-bottom: 1px solid #EEE;
-    padding: .1em 0em .1em;
-    font-size: .813em;
-    margin: 0px auto 5px;
+    margin: 0px auto 1em;
     ul {
         @include li-reset;
         li {
@@ -12,11 +9,7 @@
                 @extend %slash;
             }
             &:first-child:before {
-                content: "";
-                display: inline-block;
-                color: #666;
-                margin-left: 0;
-                padding: 0;
+                display: none;
             }
         }
     }
