--- a/sass/sass/_category.scss
+++ b/sass/sass/_category.scss
@@ -5,28 +5,29 @@
     ul {
         @include li-reset;
         li {
-            margin: 0px 3px 3px 0px;
+            margin: 0px 5px 3px 0px;
             display: block;
             float: left;
         }
     }
     a {
-        border: 1px solid #CCC;
+        border: 1px solid #392d71;
         padding: .4em 1em;
         display: block;
-        color: #333;
+        color: #392d71;
         box-sizing: border-box;
         border-radius:4px;
         &:hover,
         &:focus {
             color: #FFF;
-            background: darken($primaryColor, 15);
-            border: 1px solid darken($primaryColor, 15);
+            background: $lightColor;
+            border: 1px solid #392d71;
             box-shadow: none;
         }
         &.active {
             color: #FFF;
-            @include gradient(darken($primaryColor, 0), darken($primaryColor, 15), vertical);
+            // @include gradient(darken($primaryColor, 0), darken($primaryColor, 15), vertical);
+            background:$primaryColor
         }
         span {
             font-size: .813em;
