--- a/sass/page/_mp.scss
+++ b/sass/page/_mp.scss
@@ -799,18 +799,22 @@
   }
   .text{
     flex: 1 1 50%;
+    max-width: 50%;
     padding-left: 40px;
     @include screen('mobile') {
       width: 100%;
       padding-left: 0;
+      max-width: 100%;
     }
     .title{
       font-size: 1.625em;
       color: #8f1282;
       margin-bottom: 2em;
       display: block;
+      line-height: 160%;
       @include screen('mobile') {
         margin-bottom: 1em;
+        font-size: 1.25em;
       }
     }
     p{
